--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Do+Hyeon&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -19,6 +21,10 @@ main section {
 }
 body {
     background-color: #ffffff; 
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 header {
     background-color: #F5DFBB;
@@ -37,6 +43,7 @@ nav a:hover {
 }
 .msg {
     background-color: tan; 
+    line-height: 1.5em;
 }
 footer {
     background-color:rgba(20,30,13, .7);
@@ -45,12 +52,14 @@ nav a {
     text-align: center;
     color: black;
     text-decoration: none;
+    padding: 35px;
 }
 nav a:hover {
     color: #d9c2a3;
 }
 .home-title {
     color: #d9c2a3;
+    font-size: 2em;
 }
 h4 {
     color: #d9c2a3;
@@ -58,6 +67,10 @@ h4 {
 .book, .join {
     background-color: black;
     color: #d9c2a3;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover {
     text-align: center;
@@ -69,9 +82,14 @@ h4 {
 }
 .msg p {
     color: black;
+    font-family: 'Cormorant Garamond', serif;
+    font-size: 0.8em;
+    padding-bottom: 15px;
 }
 footer {
     color: #d9c2a3;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a {
     text-align: center;
@@ -93,3 +111,33 @@ footer p {
 footer p a:hover {
     text-decoration: underline;
 } 
+.home-title, h1, h2 {
+    font-family: 'Do Hyeon', sans-serif;
+}
+h2 {
+    margin: 0;
+}
+#logo_link {
+    padding-top: 5px;
+}
+.icon {
+    padding-top: 10px;
+}
+.msg {
+    padding: 35px;
+}
+footer.social img {
+    padding-top: 15px;
+}
+.home-title {
+    margin-top: 10px;
+}
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+.card-img {
+    border: 10px solid black;
+}
+main section img {
+    box-sizing: border-box;
+}
